# monopoly-cpp

./: .gitignore  CMakeLists.txt  README.txt  computer_log.txt  human_log.txt  log.txt
include/Client/: Bot.h  GameClient.h  Player.h  PlayerNumberMismatchException.h
include/DependencyInjection/: ServiceAlreadyRegisteredException.h  ServiceNotRegisteredException.h  ServiceProvider.h  ServiceProvider.hpp
include/Engine/: GameContext.h  GameLogger.h  GameProcessor.h  GameRepository.h  RandomContext.h
include/Interfaces/: IPlayer.h  IValidable.h
include/ObjectModels/: ActionInfo.h  ActionType.h  GameBoard.h  GameConfiguration.h  GameData.h  GameInfo.h  PaymentAction.h  Player.h  PlayerData.h  Result.h  Tile.h  TileCategory.h  TileHousing.h  TurnManager.h
include/ObjectStates/: GameState.h
src/: main.cpp
src/Client/: Bot.cpp  GameClient.cpp  Player.cpp
src/DependencyInjection/: ServiceProvider.cpp
src/Engine/: GameContext.cpp  GameLogger.cpp  GameProcessor.cpp  GameRepository.cpp  RandomContext.cpp
src/ObjectModels/: ActionInfo.cpp  GameBoard.cpp  GameConfiguration.cpp  GameData.cpp  GameInfo.cpp  Player.cpp  PlayerData.cpp  Tile.cpp  TurnManager.cpp
